--- a/app/build.gradle
+++ b/app/build.gradle
@@ -21,5 +21,5 @@ android {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
-    compile 'com.google.android.gms:play-services:0.0.+'
+    compile 'com.google.android.gms:play-services:4.1.32@aar'
 }
