--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,20 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.taranair.rpi" >
 
+    <permission
+        android:name="com.example.taranair.rpi.permission.MAPS_RECEIVE"
+        android:protectionLevel="signature" />
+
+    <uses-permission android:name="com.example.taranair.rpi.permission.MAPS_RECEIVE" />
     <uses-permission android:name="android.permission.INTERNET" />
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE"/>
-    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION"/>
-    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION"/>
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+
+    <uses-feature
+        android:glEsVersion="0x00020000"
+        android:required="true" />
 
     <application
         android:allowBackup="true"
@@ -15,10 +24,11 @@
         android:theme="@style/AppTheme" >
         <meta-data
             android:name="com.google.android.gms.version"
-            android:value= "@integer/google_play_services_version" />
+            android:value="6171000" />
         <meta-data
-        android:name="com.google.android.maps.v2.API_KEY"
-        android:value="AIzaSyDpsHTMF8EkCYZ0Wntytzvr8TSBVV8yWdw"/>
+            android:name="com.google.android.maps.v2.API_KEY"
+            android:value="AIzaSyDpsHTMF8EkCYZ0Wntytzvr8TSBVV8yWdw" />
+
         <activity
             android:name="com.example.taranair.rpi.MainActivity"
             android:label="@string/app_name" >
@@ -35,6 +45,10 @@
         <activity
             android:name="com.example.taranair.rpi.MainActivity2"
             android:label="@string/title_activity_main_activity2" >
+        </activity>
+        <activity
+            android:name="com.example.taranair.rpi.DestinationScreen"
+            android:label="@string/title_activity_destination_screen" >
         </activity>
     </application>
 
