--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,5 +22,5 @@ android {
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
     compile 'com.google.android.gms:play-services:4.1.32@aar'
-
+    compile files('libs/twitter4j-core-4.0.2.jar')
 }
