--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,6 +2,8 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.taranair.rpi" >
 
+    <uses-sdk android:minSdkVersion="7" />
+
     <permission
         android:name="com.example.taranair.rpi.permission.MAPS_RECEIVE"
         android:protectionLevel="signature" />
@@ -32,20 +34,25 @@
         <activity
             android:name="com.example.taranair.rpi.MainActivity"
             android:label="@string/app_name" >
+
+
         </activity>
         <activity
             android:name="com.example.taranair.rpi.Splash"
             android:label="@string/title_activity_splash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
         </activity>
+
         <activity
             android:name="com.example.taranair.rpi.MainActivity2"
             android:label="@string/title_activity_main_activity2" >
+
         </activity>
+
         <activity
             android:name="com.example.taranair.rpi.DestinationScreen"
             android:label="@string/title_activity_destination_screen" >
