--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -19,6 +19,8 @@
         android:glEsVersion="0x00020000"
         android:required="true" />
 
+    <android:uses-permission android:name="android.permission.READ_PHONE_STATE" />
+
     <application
         android:allowBackup="true"
         android:icon="@drawable/ic_launcher"
@@ -34,28 +36,31 @@
         <activity
             android:name="com.example.taranair.rpi.MainActivity"
             android:label="@string/app_name" >
-
-
         </activity>
         <activity
             android:name="com.example.taranair.rpi.Splash"
             android:label="@string/title_activity_splash" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
-
         </activity>
-
         <activity
             android:name="com.example.taranair.rpi.MainActivity2"
             android:label="@string/title_activity_main_activity2" >
-
         </activity>
-
         <activity
             android:name="com.example.taranair.rpi.DestinationScreen"
             android:label="@string/title_activity_destination_screen" >
+        </activity>
+        <activity
+            android:name="com.example.taranair.rpi.Rules"
+            android:label="@string/title_activity_rules" >
+        </activity>
+        <activity
+            android:name="com.example.taranair.rpi.updateStatus"
+            android:label="@string/title_activity_update_status" >
         </activity>
     </application>
 
